tests/errors/syn_cases7.java
public class syn_cases7 {
public static void main(String[] args){
switch(args.length){
: return;
}
}
}